* Adjusted body padding * Fixed spacing in success-message

--- a/style.css
+++ b/style.css
@@ -156,12 +156,18 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100svh;
-  padding: var(--spacing-200);
+  padding-block: var(--spacing-400);
+  padding-inline: var(--spacing-200);
   font-family: var(--ff-primary), sans-serif;
   font-size: var(--fs-300);
   background-color: var(--clr-green-200);
   color: var(--clr-grey-900);
   line-height: var(--lh-150);
+
+  @media (width > 50rem) {
+    padding-block: var(--spacing-1600);
+    padding-inline: var(--spacing-500);
+  }
 }
 
 .error {
@@ -191,6 +197,7 @@ body {
 
 
 .contact-form {
+  position: relative;
   background-color: var(--clr-white);
   border-radius: var(--spacing-200);
   max-width: 22rem;
@@ -320,6 +327,8 @@ body {
 }
 
 .success-message {
+ /*  position: absolute;
+  top: -100px; */
   background-color: var(--clr-green-900);
   color: var(--clr-green-200);
   border-radius: var(--spacing-150);
@@ -327,12 +336,13 @@ body {
   padding-inline: var(--spacing-300);
 }
 
+.success-message > * {
+  --flow-space: var(--spacing-100);
+}
+
+
 .success-message__heading {
   color: var(--clr-white);
   font-size: var(--fs-400);
-}
-
-.success-message__text {
-  --flow-space: var(--spacing-100);
 }
 
